--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -54,7 +54,7 @@ li {
   color: $bg;
   font-size: 36px;
   line-height: 60px;
-  font-weight: 700;
+  @include f700;
   text-align: center;
   margin-bottom: 30px;
 }
