added price range

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -8,7 +8,10 @@ html {
   box-sizing: inherit;
 }
 
-
+html,
+body {
+	height: 100%;
+}
 
 body {
   font-family: 'Roboto-Regular', sans-serif;
@@ -17,6 +20,22 @@ body {
   line-height: 24px;
   color: $text;
 }
+
+
+
+.wrapper {
+	display: flex;
+	flex-direction: column;
+	min-height: 100%;
+}
+.content {
+	flex: 1 0 auto;
+}
+.footer {
+	flex: 0 0 auto;
+}
+
+
 
 a {
   display: inline-block;
@@ -50,6 +69,10 @@ li {
   }
 }
 
+.page-content {
+  background-color: $grey;
+}
+
 .title {
   color: $bg;
   font-size: 36px;
@@ -64,7 +87,35 @@ li {
   margin-right: 13px;
 }
 
-
+.breadcrumbs {
+  &__inner {
+    padding: 45px 0 40px;
+  }
+  &__list {
+    li {
+      display: inline-block;
+      position: relative;
+      & + li {
+        padding-left: 24px;
+        &::before {
+          content: '-';
+          position: absolute;
+          left: 8px;
+          color: $green;
+        }
+      }
+      &:last-child {
+        a,
+        span {
+          color: $bg;
+        }
+      }
+    }
+    a {
+      color: #b0bec5;
+    }
+  }
+}
 
 
 
