--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -33,7 +33,8 @@
   background-color: $green;
 }
 
-.header__btn-register {
+.header__btn-register,
+.header__btn-Logout {
   background-color: $red;
   margin-left: 7px;
   
@@ -61,6 +62,282 @@
     font-size: 14px;
   }
 }
+
+.header__circle {
+  &.active {
+    display: block;
+  }
+  display: none;
+  width: 34px;
+  height: 34px;
+  background-color: #f5f5f5;
+  border-radius: 50%;
+  position: relative;
+  &::before {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #a0a0a0;
+    font-size: 14px;
+  }
+  span {
+    position: absolute;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 18px;
+    right: -7px;
+    top: -7px;
+    font-size: 11px;
+    color: #fff;
+  }
+}
+
+.header__box {
+  display: flex;
+  align-items: center;
+}
+
+.notification {
+  span {
+    background-color: $yellow;
+  }
+}
+
+.message {
+  span {
+    background-color: $tomato;
+  }
+}
+
+.header__btn-login--off {
+  display: none;
+}
+
+.header__btn-Logout {
+  display: none;
+  &.header__btn-login--on {
+    display: block;
+  }
+}
+
+.basket {
+  span {
+    background-color: $green;
+  }
+}
+
+.user {
+  margin-left: 20px;
+  margin-right: 25px;
+  padding-right: 20px;
+  position: relative;
+  &::before {
+    content: '\f107';
+    position: absolute;
+    font-family: 'icomoon';
+    font-size: 16px;
+    color: #707070;
+    top: 0;
+    right: 0;
+  }
+  &__inner {
+    display: flex;
+    align-items: center;
+  }
+  &__images {
+    width: 34px;
+    height: 34px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-right: 15px;
+  }
+  &__info {
+    font-size: 14px;
+    line-height: 24px;
+  }
+  &__name {
+    @include f500;
+    color: #222;
+  }
+  &__money {
+    color: $green;
+    @include f700;
+  }
+}
+
+.user__menu {
+  top: 69px;
+  left: 20px;
+  background-color: #fff;
+  border: 0px solid rgb(204, 204, 204);
+  position: absolute;
+  padding: 0 20px;
+  width: 158px;
+  transition: all .3s;
+  height: 0px;
+  overflow: hidden;
+  a {
+    font-size: 12px;
+    color: #546e7a;
+    margin-bottom: 15px;
+  }
+}
+
+.circkle__menu {
+  position: absolute;
+  border-top: 1px solid #e0e0e0;
+  top: 62px;
+  right: 0;
+  height: 0;
+  overflow: hidden;
+  transition: all .3s;
+}
+
+.user__box,
+.basket__box,
+.notification__box,
+.message__box {
+  position: relative;
+  height: 90px;
+  margin-top: 41px;
+  &:hover {
+    .user__menu {
+      height: auto;
+      padding: 20px;
+      border-width: 1px;
+      overflow: auto;
+    }
+  }
+}
+
+
+.basket__box,
+.notification__box,
+.message__box {
+ margin-top: 54px;
+ margin-left: 15px;
+ &:hover {
+   .header__circle::before {
+     color: $bg;
+   }
+   .circkle__menu {
+    overflow: hidden;
+    height: auto;
+   }
+   .circkle__item {
+     padding: 23px 23px;
+     border-width: 1px;
+   }
+ }
+}
+
+.circkle__item {
+  background-color: #fff;
+  border: 0px solid #e0e0e0;
+  border-left-width: 1px;
+  border-right-width: 1px;
+  border-top: none;
+  padding: 0 23px;
+  transition: all .3s;
+  display: flex;
+  align-items: center;
+  width: 269px;
+  position: relative;
+  &::before {
+    position: absolute;
+    top: 27px;
+    right: 28px;
+    color: #b0bec5;
+    font-size: 16px;
+  }
+}
+
+.circkle__images {
+  margin-right: 15px;
+}
+
+.circkle__info-name {
+  color: $bg;
+  @include f500;
+}
+
+.circkle__info-thema {
+  font-size: 12px;
+  color: $green;
+}
+
+.circkle__info-price {
+  font-size: 16px;
+  @include f500;
+  color: #000;
+}
+
+.circkle__info-date {
+  font-size: 10px;
+  color: #707070;
+}
+
+.basket__summ {
+  background-color: #fff;
+  padding: 16px 17px 12px;
+  border: 1px solid #e0e0e0;
+  border-top: none;
+}
+
+.basket__title {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 13px;
+  padding-right: 22px;
+  font-size: 16px;
+  @include f700;
+  margin-bottom: 15px;
+  color: $bg;
+}
+
+.basket__btn {
+  color: #fff;
+  @include f700;
+  font-size: 14px;
+  padding: 12px 5px;
+  background-color: $green;
+  text-align: center;
+  width: 100px;
+}
+
+.basket__btn-checkout {
+  width: 120px;
+  background-color: $red;
+  margin-left: 6px;
+}
+
+.notification__menu,
+.message__menu {
+  .circkle__images {
+    margin-right: 20px;
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    overflow: hidden;
+  }
+  .circkle__info {
+    line-height: 18px;
+  }
+}
+
+.icons-color::before {
+  color: $tomato;
+}
+
+
+
+
+
+
+
 
 // end header 
 
