--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -39,6 +39,28 @@
 @media (max-width: 840px) {
   .menu__list {
     display: none;
+    background-color: $bg;
+    position: absolute;
+    top: 150px;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    padding-bottom: 30px;
+    text-align: center;
+    a {
+      display: block;
+      padding: 10px 0;
+      border-bottom: 1px solid #fff;
+    }
+    li {
+      display: block;
+      & + li {
+        margin-left: 0;
+      }
+      &:first-child {
+        border-top: 1px solid #fff;
+      }
+    }
   }
   .menu__btn {
     display: block;
@@ -59,6 +81,9 @@
   .message__box {
     display: none;
   }
+  .circkle__menu {
+    right: auto;
+  }
 }
 
 
@@ -76,14 +101,109 @@
   }
 }
 
+@media (max-width: 520px) {
+  .header__btn-menu {
+    display: block;
+    width: 70px;
+    height: 70px;
+    background-color: $bg;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 4;
+    &::before {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 36px;
+      color: #fff;
+    }
+  }
+
+  .menu__list {
+    top: 70px;
+  }
+
+  .header__box {
+    transition: all .5s;
+    left: 100%;
+    right: -100%;
+    z-index: 2;
+    background-color: #fff;
+    height: 70px;
+    position: absolute;
+    &.active {
+      left: 70px;
+      right: 90px;
+    
+    }
+  }
+
+  .user__menu {
+    top: 59px;
+  }
+
+  .header__logo {
+    margin-left: 60px;
+  }
+
+  .menu__btn {
+    position: absolute;
+    top: 24px;
+    div {
+      background-color: $bg;
+    }
+  }
+
+  .header__top-inner {
+    height: 70px;
+  }
+
+  .circkle__menu {
+    top: 52px;
+  }
+}
 
 
+@media (max-width: 495px) {
+  .user__info {
+    display: none;
+  }
+  .user__images {
+    margin-right: 0;
+  }
+}
 
+@media (max-width: 390px) {
+  .header__box {
+    &.active {
+      left: 47px;
+    }
+  }
+  .basket__box {
+    margin-left: 0;
+  }
+  .menu__btn {
+    left: 10px;
+  }
+}
 
+@media (max-width: 360px) {
+  .user {
+    margin-right: 0;
+  }
 
-
-
-
+  .basket {
+    margin-right: 10px;
+  }
+  .header__logo {
+    margin-left: 50px;
+  }
+  .circkle__menu {
+    left: -20px;
+  }
+}
 
 
 
