--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -10,7 +10,7 @@ html {
 
 html,
 body {
-	height: 100%;
+  height: 100%;
 }
 
 body {
@@ -18,6 +18,7 @@ body {
   font-weight: 400;
   font-size: 15px;
   line-height: 24px;
+  background-color: $grey;
   color: $text;
   overflow-x: hidden;
 }
