--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -344,6 +344,122 @@
 
 // end header 
 
+// start modal 
+
+#modal {
+  background-color: $green;
+  max-width: 730px;
+  width: 100%;
+  padding-top: 90px;
+  padding-bottom: 100px;
+}
+
+.login__title {
+  
+  text-align: center;
+  font-size: 48px;
+  text-transform: uppercase;
+  margin-bottom: 40px;
+  color: #fff;
+  @include f700;
+}
+
+.login__wrapper {
+  form {
+    max-width: 400px;
+    margin: 0 auto;
+  }
+  label {
+    position: relative;
+    display: block;
+    width: 100%;
+    &::before {
+      position: absolute;
+      font-family: 'icomoon';
+      font-size: 14px;
+      color: #fff;
+      left: 18px;
+      top: 9px;
+    }
+  }
+
+  .login__label-name::before {
+    content: "\f007";
+  }
+
+  .login__label-pass::before {
+    content: "\f023";
+  }
+
+  input {
+    height: 43px;
+    margin-bottom: 8px;
+    border: none;
+    background-color: #76ae36;
+    outline: none;
+    color: #fff;
+    font-size: 14px;
+    padding-left: 40px;
+    padding-right: 10px;
+    display: block;
+    width: 100%;
+    &::placeholder {
+      color: #fff;
+      font-size: 14px;
+    }
+  }
+
+  button {
+    margin-top: 19px;
+    padding: 18px 0 16px;
+    background-color: #fff;
+    width: 140px;
+    text-transform: uppercase;
+    border: none;
+    margin-right: 10px;
+    @include f700;
+    color: #000;
+    text-align: center;
+    box-shadow: 0px 2px 2px 0px rgba(118, 174, 54, 0.75);
+  }
+}
+
+.creat-acc {
+  margin-top: 19px;
+  padding: 15px 0 15px 28px;
+  background-color: #76ae36;
+  text-align: center;
+  width: 245px;
+  color: #fff;
+  font-size: 18px;
+  position: relative;
+  &::before {
+    font-family: 'icomoon';
+    content: "\f044";
+    position: absolute;
+    left: 35px;
+    top: 15px;
+  }
+}
+
+.lost-pass {
+  display: block;
+  margin-top: 20px;
+  color: #fff;
+  font-size: 18px;
+}
+
+
+.fancybox-button svg path {
+  color: #fff;
+}
+
+
+
+// end modal 
+
+
+
 // start search 
 
 .search {
@@ -1677,10 +1793,84 @@ button.icon-unsorted {
 }
 
 
-
-
-
 // end product-one
+
+
+// start page 404 
+
+.page-404__wrapper {
+  border: 1px solid #dcdcdc;
+  background-color: #fff;
+  margin-bottom: 150px;
+}
+
+.page-404__head {
+  font-size: 24px;
+  color: #444;
+  @include f500;
+  padding: 23px 27px;
+  border-bottom: 1px solid #dcdcdc;
+}
+
+.page-404__inner {
+  text-align: center;
+  background-color: $green;
+  color: #fff;
+  padding-bottom: 100px;
+}
+
+.page-404__404 {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 800;
+  font-size: 300px;
+  line-height: 300px;
+  padding-top: 70px;
+  padding-bottom: 20px;
+  position: relative;
+  &::after {
+    content: '';
+    position: absolute;
+    background-image: url(../images/page-404.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 150px;
+    height: 292px;
+    margin-left: 20px;
+  }
+}
+
+.page-404__title {
+  margin-bottom: 30px;
+  @include f300;
+  font-size: 30px;
+}
+.page-404__text {
+  font-size: 18px;
+  max-width: 510px;
+  margin: 0 auto;
+  margin-bottom: 60px;
+}
+.page-404__link {
+  font-size: 14px;
+  color: #fff;
+  text-transform: uppercase;
+  padding: 20px 30px 16px;
+  border: 2px solid #fff;
+  border-radius: 4px;
+}
+
+
+
+
+// end page 404 
+
+
+
+
+
+
+
 
 
 
