added about page

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1798,13 +1798,15 @@ button.icon-unsorted {
 
 // start page 404 
 
-.page-404__wrapper {
+.page-404__wrapper,
+.about__wrapper {
   border: 1px solid #dcdcdc;
   background-color: #fff;
   margin-bottom: 150px;
 }
 
-.page-404__head {
+.page-404__head,
+.about__head {
   font-size: 24px;
   color: #444;
   @include f500;
@@ -1860,15 +1862,28 @@ button.icon-unsorted {
   border-radius: 4px;
 }
 
-
-
-
 // end page 404 
 
+// start about 
 
+.about__inner {
+  padding: 0 50px;
+}
 
+.about__box {
+  h3 {
+    font-size: 20px;
+    @include f700;
+    color: #444;
+    margin-top: 40px;
+    margin-bottom: 15px;
+  }
 
-
+  p {
+    margin-bottom: 40px;
+  }
+}
+// end about 
 
 
 
