--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2116,20 +2116,240 @@ button.icon-unsorted {
 }
 
 
-
-
-
-
-
-
 // end settings 
 
 
+// start profile 
+
+
+
+.profile__inner {
+  display: flex;
+  margin-bottom: 30px;
+}
+
+.profile__aside {
+  margin-right: 30px;
+  max-width: 270px;
+  width: 100%;
+  & .footer__social-link {
+    margin-bottom: 30px;
+  }
+}
+
+.profile__content {
+  width: 100%;
+}
+
+.profile-ststus {
+  font-size: 13px;
+  color: #707070;
+  padding: 4px 9px 3px 30px;
+  border: 1px solid #d6d6d6;
+  position: relative;
+  &::before {
+    content: '';
+    position: absolute;
+    width: 9px;
+    height: 9px;
+    border-radius: 50%;
+    left: 11px;
+    top: 13px;
+  }
+}
+
+.profile-on {
+  &::before {
+    background-color: $green;
+  }
+}
+
+.profile-off {
+  &::before {
+    background-color: $red;
+  }
+}
+
+.profile__aside-btn {
+  margin-bottom: 13px;
+  text-align: center;
+}
+
+.profile__aside-message {
+  margin-bottom: 17px;
+  display: block;
+  width: 100%;
+  font-size: 16px;
+  @include f500;
+  color: #fff;
+  background-color: #546e7a;
+  padding: 18px 10px;
+  position: relative;
+  box-shadow: 0px 1px 2px 0px rgba(69, 90, 100, 0.75);
+  &::before {
+    content: '\f003';
+    position: absolute;
+    font-family: 'icomoon';
+    left: 50px;
+    top: 16px;
+
+  }
+}
+
+
+
+.profile__aside-folloving {
+  margin-bottom: 17px;
+  display: block;
+  width: 100%;
+  font-size: 16px;
+  @include f700;
+  color: #fff;
+  background-color: $green;
+  padding: 18px 10px;
+  box-shadow: 0px 1px 2px 0px rgba(69, 90, 100, 0.75);
+}
+
+
+.profile__banner {
+  padding: 20px;
+  border: 1px solid #dedede;
+  background-color: #fff;
+  margin-bottom: 35px;
+}
+
+.profile__banner-images {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  min-height: 332px;
+}
+
+.profile__items {
+  display: flex;
+  border: 1px solid #dedede;
+}
+
+.profile__item {
+  width: 25%;
+  background-color: #fff;
+  text-align: center;
+  padding: 20px 5px 17px;
+  & + .profile__item {
+    border-left: 1px solid #dedede;
+  }
+}
+.profile__item-title {
+  font-size: 14px;
+  color: $bg;
+  @include f500;
+}
+.profile__item-content {
+  font-size: 14px;
+  color: #707070;
+  @include f500;
+  &.profile__item-sales {
+    color: $bg;
+  }
+}
+
+.profile-settings {
+
+  .product-one__tabs.settings__tabs {
+
+    .tabs span {
+
+      font-family: 'Roboto', sans-serif !important;
+      font-weight: 500;
+      color: #707070;
+      position: relative;
+      &.active::before {
+        color: $green;
+      }
+      &::before {
+        font-family: 'icomoon';
+        position: absolute;
+        color: #d0d0d0;
+        font-size: 14px;
+        left: 27px;
+        top: 16px;
+      }
+    }
+  }
+}
+
+
+.personal-box {
+  background-color: #fff;
+  padding: 35px 40px 25px;
+  border: 1px solid #dedede;
+}
+
+.personal-box__title {
+  color: $bg;
+  font-size: 20px;
+  @include f700;
+  margin-bottom: 25px;
+}
+
+.personal-box__text {
+  margin-bottom: 20px;
+  p {
+    color: #707070;
+  }
+}
+
+.personal-box__item-head {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 16px;
+}
+
+.personal-box__item-name {
+  color: $bg;
+  font-size: 16px;
+  @include f500;
+  font-style: italic;
+}
+
+
+.personal-box__item-number {
+  color: $bg;
+  font-size: 16px;
+  @include f700;
+}
+
+.personal-box__item-line {
+  height: 15px;
+  background-color: #f4f4f4;
+  border-radius: 3px;
+  margin-bottom: 23px;
+  span {
+    display: block;
+    height: 15px;
+    border-radius: 3px;
+    background-image: url(../images/pro-bar.jpg);
+    background-repeat: repeat;
+  }
+}
 
 
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+// end profile 
 
 
 
