added upload markup

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2335,24 +2335,28 @@ button.icon-unsorted {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 // end profile 
 
 
+// start upload 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// end upload 
 
 
 
