--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -533,6 +533,12 @@
   background-color: $grey;
 }
 
+.products__wrapper,
+.product-slider__wrapper {
+  max-width: 1920px;
+  margin: 0 auto;
+}
+
 .products__inner-btn {
   text-align: center;
   margin-bottom: 60px;
@@ -554,8 +560,14 @@
 
 .products__inner-box {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
+  margin-left: -30px;
   flex-wrap: wrap;
+}
+
+.products .product__item {
+  flex-basis: calc(25% - 30px);
+  margin-left: 30px;
 }
 
 .product__item {
@@ -1265,9 +1277,10 @@ button.icon-unsorted {
 
 .product-page__content {
   .product__item {
-    max-width: 270px;
+    flex-basis: calc(33.3333% - 30px);
     background-color: #fff;
     transition: all .5s;
+    margin-left: 30px;
   }
   .product__item-img {
     min-height: 180px;
@@ -1292,9 +1305,10 @@ button.icon-unsorted {
 
 .product-page__items {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   flex-wrap: wrap;
   margin-bottom: 30px;
+  margin-left: -30px;
 }
 
 
@@ -1370,6 +1384,7 @@ button.icon-unsorted {
 .product__item {
   &.list {
     max-width: 100%;
+    flex-basis: 100%;
     .product__item-img {
       width: 240px;
       float: left;
@@ -1429,7 +1444,7 @@ button.icon-unsorted {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 16px 0;
+  padding: 16px;
 }
 
 .product-one_images {
@@ -2089,7 +2104,8 @@ button.icon-unsorted {
   display: flex;
   align-items: center;
   label {
-    width: 260px;
+    max-width: 260px;
+    width: 100%;
     font-size: 15px;
     color: #444;
   }
@@ -2112,7 +2128,49 @@ button.icon-unsorted {
     border: 1px solid #dedede;
     padding: 0 10px;
     outline: transparent;
+    &::placeholder {
+      color: #707070;
+    }
   }
+
+
+
+  .jq-selectbox {
+    max-width: 540px;
+    width: 100%;
+  }
+  .jq-selectbox__select {
+    max-width: 540px;
+    width: 100%;
+    height: 40px;
+    padding: 0 18px;
+    border: 1px solid #d7d7d7;
+    border-bottom-color: #d7d7d7;
+    border-radius: 0px;
+    background: #f9f9f9;
+    box-shadow: none;
+    font-family: 'Roboto-Regular', sans-serif;
+    color: #707070;
+    text-shadow: none;
+    line-height: 40px;
+  }
+  .jq-selectbox__trigger-arrow {
+    border: none;
+    top: 0;
+    right: 20px;
+    line-height: 40px;
+    font-size: 15px;
+    &::before {
+      content: '\f0d7';
+      font-family: 'icomoon';
+    }
+  }
+  .jq-selectbox__trigger {
+    border-left: none;
+  }
+
+
+
 }
 
 
@@ -2380,9 +2438,6 @@ button.icon-unsorted {
     span {
       color: $green;
     }
-    &::placeholder {
-      color: #707070;
-    }
   }
   select,
   input,
@@ -2394,6 +2449,9 @@ button.icon-unsorted {
     background-color: #f9f9f9;
     padding: 0 18px;
     outline: transparent;
+    &::placeholder {
+      color: #707070;
+    }
   }
   textarea {
     resize: none;
@@ -2479,14 +2537,153 @@ button.icon-unsorted {
 }
 
 
-
-
-
-
-
-
-
 // end upload 
+
+
+// start withdrawals 
+
+.withdrawals__inner {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 110px;
+}
+
+.withdrawals__col {
+  max-width: 570px;
+  width: 100%;
+  background-color: #fff;
+  border: 1px solid #dedede;
+  height: 100%;
+}
+
+
+
+.withdrawals__title {
+  font-size: 24px;
+  @include f500;
+  padding: 18px 32px 24px;
+  border-bottom: 1px solid #dedede;
+  margin-bottom: 30px;
+  color: $bg;
+}
+
+.withdrawals__content {
+  padding-left: 35px;
+  padding-right: 40px;
+  button {
+    margin-bottom: 50px;
+    color: #fff;
+    background-color: $green;
+    border: none;
+    padding: 15px 36px;
+    cursor: pointer;
+  }
+}
+
+.withdrawals__form-line {
+  margin-bottom: 25px;
+  label {
+    display: block;
+    width: 100%;
+    @include f500;
+    font-size: 16px;
+    color: $bg;
+    margin-bottom: 15px;
+    span {
+      color: $green;
+    }
+  }
+
+  input,
+  select {
+    width: 100%;
+    height: 40px;
+    display: block;
+    border: 1px solid #d7d7d7;
+    background-color: #f9f9f9;
+    padding: 0 18px;
+    outline: transparent;
+    &::placeholder {
+      color: #707070;
+    }
+  }
+
+  .jq-selectbox {
+    width: 100%;
+  }
+  .jq-selectbox__select {
+    height: 40px;
+    padding: 0 18px;
+    border: 1px solid #d7d7d7;
+    border-bottom-color: #d7d7d7;
+    border-radius: 0px;
+    background: #f9f9f9;
+    box-shadow: none;
+    font-family: 'Roboto-Regular', sans-serif;
+    color: #707070;
+    text-shadow: none;
+    line-height: 40px;
+  }
+  .jq-selectbox__trigger-arrow {
+    border: none;
+    top: 0;
+    right: 20px;
+    line-height: 40px;
+    font-size: 15px;
+    &::before {
+      content: '\f0d7';
+      font-family: 'icomoon';
+    }
+  }
+  .jq-selectbox__trigger {
+    border-left: none;
+  }
+}
+
+.withdrawals__content-items {
+  padding-bottom: 35px;
+}
+
+.withdrawals__content-item {
+  display: flex;
+  height: 42px;
+  align-items: center;
+  font-size: 13px;
+  color: #444;
+  &:nth-child(odd) {
+    background-color: #f9f9f9;
+  }
+}
+
+.withdrawals__content-date {
+  width: 154px;
+  padding-left: 20px;
+  @include f500;
+  
+}
+.withdrawals__content-email {
+  width: 180px;
+  @include f500;
+}
+.withdrawals__content-price {
+  width: 70px;
+  @include f700;
+}
+.withdrawals__content-status {
+  width: 88px;
+  @include f700;
+  &.withdrawals__content-paid {
+    color: $green;
+  }
+}
+
+
+
+
+
+// end withdrawals 
+
+
 
 
 
